@@ -19608,9 +19608,13 @@ name|mfl
 argument_list|)
 expr_stmt|;
 block|}
-DECL|field|wasCalled
+DECL|field|afterWasCalled
 name|boolean
-name|wasCalled
+name|afterWasCalled
+decl_stmt|;
+DECL|field|beforeWasCalled
+name|boolean
+name|beforeWasCalled
 decl_stmt|;
 annotation|@
 name|Override
@@ -19620,17 +19624,32 @@ name|void
 name|doAfterFlush
 parameter_list|()
 block|{
-name|wasCalled
+name|afterWasCalled
+operator|=
+literal|true
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|doBeforeFlush
+specifier|protected
+name|void
+name|doBeforeFlush
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|beforeWasCalled
 operator|=
 literal|true
 expr_stmt|;
 block|}
 block|}
 comment|// LUCENE-1222
-DECL|method|testDoAfterFlush
+DECL|method|testDoBeforeAfterFlush
 specifier|public
 name|void
-name|testDoAfterFlush
+name|testDoBeforeAfterFlush
 parameter_list|()
 throws|throws
 name|IOException
@@ -19713,14 +19732,27 @@ name|assertTrue
 argument_list|(
 name|w
 operator|.
-name|wasCalled
+name|beforeWasCalled
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|w
+operator|.
+name|afterWasCalled
 argument_list|)
 expr_stmt|;
 name|w
 operator|.
-name|wasCalled
+name|beforeWasCalled
 operator|=
-literal|true
+literal|false
+expr_stmt|;
+name|w
+operator|.
+name|afterWasCalled
+operator|=
+literal|false
 expr_stmt|;
 name|w
 operator|.
@@ -19744,7 +19776,14 @@ name|assertTrue
 argument_list|(
 name|w
 operator|.
-name|wasCalled
+name|beforeWasCalled
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|w
+operator|.
+name|afterWasCalled
 argument_list|)
 expr_stmt|;
 name|w
